#
# Copyright (c) 2001 Institute for Information Industry, Taiwan, Republic of China 
# Written by mangelo@users.sourceforge.net
# 
# This file is part of III ASN.1 Tool.
# 
# The contents of this file are subject to the Mozilla Public License
# Version 1.0 (the "License"); you may not use this file except in
# compliance with the License. You may obtain a copy of the License at
# http://www.mozilla.org/MPL/
#
# Software distributed under the License is distributed on an "AS IS"
# basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See
# the License for the specific language governing rights and limitations
# under the License.
# 
# III ASN.1 Tool is the ASN.1 to C++ compiler and C++ run time library
# for encoding and decoding ASN.1 types.
# For details, see the III ASN.1 Tool World-Wide-Web page, 
# `http://iiiasn1.sourceforge.net'.
#

AUTOMAKE_OPTIONS = dist-zip -Wno-portability

EXTRA_DIST	= asnh323.dsp asnh323.vcproj asnh323_dll.dsp asnh323_dll.vcproj asnh323.dtf asnh323.ignore ro.sed $(asn_sources)

lib_LIBRARIES = libasnh323.a

INCLUDES = @PIPEFLAG@ @DEBUGFLAG@ -I$(top_builddir)/asn1 -I$(top_srcdir)/asn1 

# specify the header files that should be installed

include_HEADERS = addressing_data_elements.h\
	addressing_data_elements.inl\
        aliases.h\
	call_completion_operations.h\
	call_completion_operations.inl\
	call_diversion_operations.h\
	call_diversion_operations.inl\
	call_hold_operations.h\
	call_hold_operations.inl\
	call_offer_operations.h\
	call_offer_operations.inl\
	call_park_pickup_operations.h\
	call_park_pickup_operations.inl\
	call_transfer_operations.h\
	call_transfer_operations.inl\
	call_waiting_operations.h\
	call_waiting_operations.inl\
	h225_generic_parameters_definition.h\
	h235_security_messages.h\
	h235_security_messages.inl\
	h235_security_messages_t.cxx\
	h323_messages.h\
	h323_messages.inl\
	h4501_general_error_list.h\
	h4501_supplementary_serviceapdu_structure.h\
	h4501_supplementary_serviceapdu_structure.inl\
	hm_aliasaddress.h\
	hm_aliasaddress.inl\
	hm_alternategk.h\
	hm_alternategk.inl\
	hm_callidentifier.h\
	hm_callidentifier.inl\
	hm_supportedprefix.h\
	hm_supportedprefix.inl\
	hm_transportaddress.h\
	hm_transportaddress.inl\
	manufacturer_specific_service_extension_definition.h\
	manufacturer_specific_service_extension_definition.inl\
	manufacturer_specific_service_extension_definition_t.cxx\
	media_gateway_control.h\
	media_gateway_control.inl\
	message_waiting_indication_operations.h\
	message_waiting_indication_operations.inl\
	msc_capabilitytableentry.h\
	msc_capabilitytableentry.inl\
	msc_openlogicalchannel.h\
	msc_openlogicalchannel.inl\
	msc_t38faxprofile.h\
	msc_t38faxprofile.inl\
	msc_transportaddress.h\
	msc_transportaddress.inl\
	multimedia_system_control.h\
	multimedia_system_control.inl\
	name_operations.h\
	name_operations.inl\
	remote_operations_apdus.h\
	remote_operations_apdus.inl\
	remote_operations_apdus_t.cxx\
	remote_operations_information_objects.h\
	remote_operations_information_objects.inl


#specify the source files build by asnparser

BUILT_SOURCES =  addressing_data_elements.cxx \
call_completion_operations.cxx\
call_diversion_operations.cxx\
call_hold_operations.cxx\
call_offer_operations.cxx\
call_park_pickup_operations.cxx\
call_transfer_operations.cxx\
call_waiting_operations.cxx\
h225_generic_parameters_definition.cxx\
h235_security_messages.cxx\
h323_messages.cxx\
h4501_general_error_list.cxx\
h4501_supplementary_serviceapdu_structure.cxx\
hm_aliasaddress.cxx\
hm_alternategk.cxx\
hm_callidentifier.cxx\
hm_supportedprefix.cxx\
hm_transportaddress.cxx\
manufacturer_specific_service_extension_definition.cxx\
media_gateway_control.cxx\
message_waiting_indication_operations.cxx\
msc_capabilitytableentry.cxx\
msc_openlogicalchannel.cxx\
msc_t38faxprofile.cxx\
msc_transportaddress.cxx\
multimedia_system_control.cxx\
name_operations.cxx\
remote_operations_apdus.cxx\
remote_operations_information_objects.cxx

#specify the ASN.1 source files

asn_sources = h235v2.asn\
            h245v7.asn\
            h2250v4.asn\
            h248.asn\
            address.asn\
            ro.asn\
            h4501.asn\
            h4502.asn\
            h4503.asn\
            h4504.asn\
            h4505.asn\
            h4506.asn\
            h4507.asn\
            h4508.asn\
            h4509.asn\
            h45010.asn\
            lgc.asn 
                       
libasnh323_a_SOURCES = $(BUILT_SOURCES)

CLEANFILES = $(include_HEADERS) $(BUILT_SOURCES)

# These files are generated by asnparser, and are supporsed to be used.
unusedFILES = address.h address.cxx aliases.cxx cap.h cap.cxx cidmodule.h cidmodule.cxx lgc.h lgc.cxx alternategk_module.h alternategk_module.cxx
	
$(BUILT_SOURCES) : $(asn_sources)
	@ASNPARSER@ -v -c $(addprefix $(srcdir)/, $(asn_sources))
	rm -f $(unusedFILES)

#distribute only the *.asn and Makefile.* files.
DISTFILES = Makefile.am Makefile.in $(EXTRA_DIST)	
	
SUBDIRS = . testsuite
